--- a/demos.full/index.html
+++ b/demos.full/index.html
@@ -67,6 +67,7 @@
 				<ul>
 					<li><a href="atuck/">Anal Tuck</a></li>
 					<li><a href="colonic/">Colonic Irrigation</a></li>
+					<li><a href="dadplazz/">DadPlazz!</a></li>
 				</ul>
 			</div>
 		</div>
