--- a/demos.full/def/index.html
+++ b/demos.full/def/index.html
@@ -18,6 +18,7 @@
         <script language="javascript" type="text/javascript">
         	var player; 
             function startPlayer() { 
+            	DEMO_ROOT="..";
             	player = new SeniorDads.Demos.Player(document.getElementById('demo'), 'democanvas', SeniorDads.Demos.DefDemo);
             }
         </script>
