--- a/demos/def/index.html
+++ b/demos/def/index.html
@@ -15,7 +15,7 @@
         <script language="javascript" type="text/javascript" src="../../demos.full/common/Codef/codef_stats.js"></script>
         <script language="javascript" type="text/javascript" src="../common/riffwave.js"></script>
         <script language="javascript" type="text/javascript" src="main.js"></script>
-        <script language="javascript" type="text/javascript">var s;function d(){s=new SeniorDads.Demos.Player(document.getElementById('demo'),'democanvas',SeniorDads.Demos.DefDemo);}</script>
+        <script language="javascript" type="text/javascript">var s;function d(){DEMO_ROOT="..";s=new SeniorDads.Demos.Player(document.getElementById('demo'),'democanvas',SeniorDads.Demos.DefDemo);}</script>
         <style>
             body { background-color: #000000; color: #FFFFFF; }
             a, a:visited, a:link { color: #ffff88; }
